# hyprland-socket

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hyprland_socket/: __init__.py  _socket.py  commands.py  errors.py  events.py  models.py  values.py
tests/: test_events.py  test_models.py  test_values.py
