[project]
name = "hyprland-socket"
version = "0.2.0"
description = "Typed Python library for Hyprland IPC via Unix sockets"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["hyprland", "ipc", "wayland", "compositor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
]

[project.urls]
Repository = "https://github.com/BlueManCZ/hyprland-socket"

[dependency-groups]
dev = ["pytest>=9.0", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
