[project]
name = "hyprland-socket"
version = "0.9.0"
description = "Typed Python library for Hyprland IPC via Unix sockets"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["hyprland", "ipc", "wayland", "compositor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/BlueManCZ/hyprland-socket"

[dependency-groups]
dev = ["pyright>=1.1", "pytest>=9.0", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
